# tpot

./: pyproject.toml  tox.ini
.github/workflows/: publish_package.yml  tests.yml
tpot/: __init__.py  _version.py
